apply pagging